# hardcopy

./: .env.example  .gitignore  ARCHITECTURE.md  BRIDGE_AGENT_BRIEF.md  Dockerfile  LICENSE  PLAN.md  README.md  compose.yaml  config.example.yaml  pyproject.toml
src/hardcopy/: __main__.py  models.py  render.py  rules.py  store.py
src/hardcopy/printers/: base.py  console.py  escpos_printer.py
src/hardcopy/sources/: base.py  github_poller.py  webhook.py
tests/: test_quiet_hours.py  test_rules.py
