[project]
name = "hardcopy"
version = "0.1.0"
description = "Prints important notifications (GitHub first) on an ESC/POS receipt printer"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "python-escpos>=3.1",
]

[project.optional-dependencies]
webhook = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hardcopy"]

[tool.ruff]
line-length = 100
